--- a/estilo2.css
+++ b/estilo2.css
@@ -7,7 +7,7 @@ body {
 
 header {
    
-    background-color: #002D42;
+    background-color: #6dadab;
     padding: 10px 0;
     display: flex;
     justify-content: space-between;
