--- a/estilo2.css
+++ b/estilo2.css
@@ -100,7 +100,7 @@ main {
 }
 
 footer {
-    background-color: #00539C;
+    background-color:  #6dadab;
     color: white;
     text-align: center;
     padding: 10px 0;
