--- a/estilo2.css
+++ b/estilo2.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-image: url(imagens/img.bck/bg-login.jpg);
+    background-image: url(imagens/fundo-da-placa-mae.jpg);
     background-size: cover;
     background-position: center;
     background-attachment: fixed;        
